src/objects/Zendesk__Zendesk_Bulk_Sync_Response__c.object
<CustomObject>
    <fields>
        <fullName>Zendesk__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Zendesk Bulk Sync Responses</relationshipLabel>
        <relationshipName>Zendesk_Bulk_Sync_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Matched_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Zendesk Bulk Sync Responses</relationshipLabel>
        <relationshipName>Zendesk_Bulk_Sync_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Matched_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Zendesk Bulk Sync Responses</relationshipLabel>
        <relationshipName>Zendesk_Bulk_Sync_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zendesk__Matched_Record__c</fullName>
        <description>Matched record name for display in datatables</description>
        <label>Matched Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Matched_SObject__c</fullName>
        <label>Matched SObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__Original_Payload__c</fullName>
        <description>Original JSON Payload received from Zendesk</description>
        <inlineHelpText>Original JSON Payload received from Zendesk</inlineHelpText>
        <label>Original Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for manual match</fullName>
                </value>
                <value>
                    <fullName>Waiting for updating Zendesk ExtID</fullName>
                </value>
                <value>
                    <fullName>Waiting for creating in Zendesk</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Waiting for create in Salesforce</fullName>
                </value>
                <value>
                    <fullName>Waiting for update in Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Created_At__c</fullName>
        <label>ZD Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Details__c</fullName>
        <label>ZD Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Id__c</fullName>
        <label>ZD_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Name__c</fullName>
        <label>ZD Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Notes__c</fullName>
        <label>ZD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Org_Domain_Names__c</fullName>
        <label>ZD Org Domain Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Tags__c</fullName>
        <label>ZD Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_Updated_At__c</fullName>
        <label>ZD Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_User_Email__c</fullName>
        <label>ZD User Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_User_Organization_ID__c</fullName>
        <label>ZD User Organization ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_User_Phone__c</fullName>
        <label>ZD User Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__ZD_User_Verified__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ZD User Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk__Zendesk_Sync_Job__c</fullName>
        <label>Zendesk Sync Job</label>
        <referenceTo>Zendesk__Zendesk_Sync_Job__c</referenceTo>
        <relationshipLabel>Zendesk Bulk Sync Responses</relationshipLabel>
        <relationshipName>Zendesk_Bulk_Sync_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Zendesk Bulk Sync Response</label>
    <listViews>
        <fullName>Zendesk__All</fullName>
        <columns>NAME</columns>
        <columns>Zendesk__Status__c</columns>
        <columns>Zendesk__Matched_Account__c</columns>
        <columns>Zendesk__ZD_Name__c</columns>
        <columns>Zendesk__Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Zendesk__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZDRESP-{0000}</displayFormat>
        <label>Zendesk Bulk Sync Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Bulk Sync Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>